src/gramaticPackage/y.output
   0  $accept : programa $end

   1  programa : nombre bloque_sentencias
   2           | T_ID
   3           | bloque_sentencias
   4           |

   5  bloque_sentencias : BEGIN sentencias END
   6                    | BEGIN END

   7  sentencias : sentencia
   8             | sentencias sentencia

   9  sentencia : declaracion
  10            | asignacion
  11            | if_statement
  12            | repeat_while_statement
  13            | salida
  14            | declaracion_funcion
  15            | goto_statement
  16            | sentencia_declarativa_tipos
  17            | T_ETIQUETA
  18            | RET '(' expresion ')' ';'
  19            | RET '(' expresion ')'
  20            | RET '(' ')' ';'

  21  declaracion : tipo lista_var ';'
  22              | tipo lista_var error
  23              | tipo ';'

  24  lista_var : lista_var ',' T_ID
  25            | T_ID
  26            | lista_var T_ID

  27  nombre : T_ID

  28  encabezado_funcion : tipo FUN

  29  declaracion_funcion : encabezado_funcion nombre '(' parametro ')' bloque_sentencias
  30                      | encabezado_funcion nombre '(' parametros_error ')' bloque_sentencias
  31                      | encabezado_funcion nombre '(' tipo ')' bloque_sentencias
  32                      | tipo nombre '(' tipo T_ID ')' bloque_sentencias
  33                      | encabezado_funcion '(' tipo T_ID ')' bloque_sentencias
  34                      | encabezado_funcion nombre '(' parametro ')' bloque_sentencias ';'

  35  parametro : tipo T_ID

  36  parametros_error : parametro ',' parametro
  37                   | parametros_error ',' parametro
  38                   |

  39  repeat_sentencia : bloque_sentencias
  40                   | sentencia

  41  tipo : DOUBLE
  42       | LONGINT
  43       | T_ID

  44  signo_THEN : THEN

  45  signo_ELSE : ELSE

  46  bloque_THEN : signo_THEN repeat_sentencia

  47  bloque_THEN_CON_ELSE : signo_THEN repeat_sentencia

  48  bloque_ELSE : signo_ELSE repeat_sentencia

  49  if_statement : IF '(' condicion ')' bloque_THEN END_IF ';'
  50               | IF '(' condicion ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'
  51               | IF '(' condicion ')' bloque_THEN_CON_ELSE repeat_sentencia END_IF ';'
  52               | IF '(' condicion ')' bloque_THEN END_IF
  53               | IF '(' condicion ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF
  54               | IF '(' ')' bloque_THEN END_IF ';'
  55               | IF '(' ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'
  56               | IF '(' condicion ')' repeat_sentencia END_IF ';'
  57               | IF '(' condicion ')' repeat_sentencia bloque_ELSE END_IF ';'
  58               | IF '(' condicion ')' signo_THEN END_IF ';'
  59               | IF '(' condicion ')' signo_THEN signo_ELSE END_IF ';'
  60               | IF condicion bloque_THEN END_IF ';'
  61               | IF condicion bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'
  62               | IF '(' condicion ')' bloque_THEN error ';'
  63               | IF '(' condicion ')' bloque_THEN_CON_ELSE bloque_ELSE error ';'

  64  inicio_while : REPEAT

  65  repeat_while_statement : inicio_while repeat_sentencia WHILE '(' condicion ')' ';'
  66                         | inicio_while repeat_sentencia WHILE '(' condicion ')'
  67                         | inicio_while WHILE '(' condicion ')'
  68                         | inicio_while repeat_sentencia WHILE '(' ')' ';'
  69                         | inicio_while repeat_sentencia WHILE condicion ';'
  70                         | inicio_while repeat_sentencia error '(' condicion ')' ';'

  71  salida : OUTF '(' T_CADENA ')' ';'
  72         | OUTF '(' expresion ')' ';'
  73         | OUTF '(' expresion ')'
  74         | OUTF '(' T_CADENA ')'
  75         | OUTF '(' sentencia ')' ';'
  76         | OUTF '(' ')' ';'

  77  sentencia_declarativa_tipos : TYPEDEF T_ID T_ASIGNACION tipo subrango ';'
  78                              | TYPEDEF PAIR '<' LONGINT '>' T_ID ';'
  79                              | TYPEDEF PAIR '<' DOUBLE '>' T_ID ';'
  80                              | TYPEDEF PAIR '<' '>' T_ID ';'
  81                              | TYPEDEF PAIR DOUBLE T_ID ';'
  82                              | TYPEDEF PAIR LONGINT T_ID ';'
  83                              | TYPEDEF T_ID T_ASIGNACION tipo subrango
  84                              | TYPEDEF PAIR '<' T_ID '>' T_ID ';'
  85                              | TYPEDEF PAIR '<' LONGINT '>' T_ID
  86                              | TYPEDEF PAIR '<' DOUBLE '>' T_ID
  87                              | TYPEDEF '<' LONGINT '>' T_ID ';'
  88                              | TYPEDEF '<' DOUBLE '>' T_ID ';'
  89                              | TYPEDEF PAIR '<' LONGINT '>' ';'
  90                              | TYPEDEF PAIR '<' DOUBLE '>' ';'
  91                              | TYPEDEF T_ASIGNACION tipo subrango ';'
  92                              | TYPEDEF T_ID T_ASIGNACION subrango ';'
  93                              | TYPEDEF T_ID T_ASIGNACION tipo ';'
  94                              | TYPEDEF T_ID tipo subrango ';'

  95  subrango : '{' T_CTE ',' T_CTE '}'
  96           | '{' '-' T_CTE ',' T_CTE '}'
  97           | '{' T_CTE ',' '-' T_CTE '}'
  98           | '{' '-' T_CTE ',' '-' T_CTE '}'
  99           | '{' '}'
 100           | error

 101  condicion : expresion comparador expresion
 102            | expresion error expresion
 103            | expresion comparador
 104            | comparador expresion

 105  comparador : MENOR_IGUAL
 106             | MAYOR_IGUAL
 107             | DISTINTO
 108             | '='
 109             | '<'
 110             | '>'

 111  asignacion : IDENTIFIER_LIST T_ASIGNACION expresion_list error
 112             | IDENTIFIER_LIST T_ASIGNACION expresion_list ';'
 113             | IDENTIFIER_LIST T_ASIGNACION ';'

 114  expresion_list : expresion
 115                 | expresion_list ',' expresion

 116  IDENTIFIER_LIST : IDENTIFIER_LIST ',' T_ID
 117                  | IDENTIFIER_LIST ',' acceso_par
 118                  | T_ID
 119                  | acceso_par
 120                  | acceso_par error acceso_par
 121                  | T_ID error acceso_par
 122                  | acceso_par error T_ID
 123                  | T_CTE
 124                  | IDENTIFIER_LIST ',' T_CTE

 125  acceso_par : T_ID '{' T_CTE '}'
 126             | T_ID '{' '}'
 127             | T_ID T_CADENA

 128  goto_statement : GOTO T_ETIQUETA ';'
 129                 | GOTO ';'
 130                 | GOTO T_ETIQUETA
 131                 | GOTO error

 132  invocacion_funcion : T_ID '(' parametro_real ')'
 133                     | T_ID '(' error ')'

 134  parametro_real : expresion_aritmetica

 135  expresion_aritmetica : expresion_aritmetica '+' expresion_aritmetica
 136                       | expresion_aritmetica '-' expresion_aritmetica
 137                       | expresion_aritmetica '*' expresion_aritmetica
 138                       | expresion_aritmetica '/' expresion_aritmetica
 139                       | T_CTE
 140                       | T_ID
 141                       | acceso_par
 142                       | unaria

 143  expresion : expresion '+' expresion
 144            | expresion '-' expresion
 145            | expresion '*' expresion
 146            | expresion '/' expresion
 147            | T_CTE
 148            | T_ID
 149            | acceso_par
 150            | invocacion_funcion
 151            | unaria
 152            | error

 153  unaria : '-' T_CTE

state 0
	$accept : . programa $end  (0)
	programa : .  (4)

	BEGIN  shift 1
	T_ID  shift 2
	$end  reduce 4

	programa  goto 3
	nombre  goto 4
	bloque_sentencias  goto 5


state 1
	bloque_sentencias : BEGIN . sentencias END  (5)
	bloque_sentencias : BEGIN . END  (6)

	IF  shift 6
	END  shift 7
	OUTF  shift 8
	TYPEDEF  shift 9
	RET  shift 10
	REPEAT  shift 11
	GOTO  shift 12
	LONGINT  shift 13
	DOUBLE  shift 14
	T_ID  shift 15
	T_CTE  shift 16
	T_ETIQUETA  shift 17
	.  error

	sentencias  goto 18
	sentencia  goto 19
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	tipo  goto 28
	encabezado_funcion  goto 29
	inicio_while  goto 30
	IDENTIFIER_LIST  goto 31
	acceso_par  goto 32


state 2
	programa : T_ID .  (2)
	nombre : T_ID .  (27)

	$end  reduce 2
	BEGIN  reduce 27


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : nombre . bloque_sentencias  (1)

	BEGIN  shift 1
	.  error

	bloque_sentencias  goto 33


state 5
	programa : bloque_sentencias .  (3)

	.  reduce 3


state 6
	if_statement : IF . '(' condicion ')' bloque_THEN END_IF ';'  (49)
	if_statement : IF . '(' condicion ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'  (50)
	if_statement : IF . '(' condicion ')' bloque_THEN_CON_ELSE repeat_sentencia END_IF ';'  (51)
	if_statement : IF . '(' condicion ')' bloque_THEN END_IF  (52)
	if_statement : IF . '(' condicion ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF  (53)
	if_statement : IF . '(' ')' bloque_THEN END_IF ';'  (54)
	if_statement : IF . '(' ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'  (55)
	if_statement : IF . '(' condicion ')' repeat_sentencia END_IF ';'  (56)
	if_statement : IF . '(' condicion ')' repeat_sentencia bloque_ELSE END_IF ';'  (57)
	if_statement : IF . '(' condicion ')' signo_THEN END_IF ';'  (58)
	if_statement : IF . '(' condicion ')' signo_THEN signo_ELSE END_IF ';'  (59)
	if_statement : IF . condicion bloque_THEN END_IF ';'  (60)
	if_statement : IF . condicion bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'  (61)
	if_statement : IF . '(' condicion ')' bloque_THEN error ';'  (62)
	if_statement : IF . '(' condicion ')' bloque_THEN_CON_ELSE bloque_ELSE error ';'  (63)

	error  shift 34
	MENOR_IGUAL  shift 35
	MAYOR_IGUAL  shift 36
	DISTINTO  shift 37
	T_ID  shift 38
	T_CTE  shift 39
	'-'  shift 40
	'('  shift 41
	'<'  shift 42
	'>'  shift 43
	'='  shift 44
	.  error

	expresion  goto 45
	condicion  goto 46
	comparador  goto 47
	acceso_par  goto 48
	invocacion_funcion  goto 49
	unaria  goto 50


state 7
	bloque_sentencias : BEGIN END .  (6)

	.  reduce 6


state 8
	salida : OUTF . '(' T_CADENA ')' ';'  (71)
	salida : OUTF . '(' expresion ')' ';'  (72)
	salida : OUTF . '(' expresion ')'  (73)
	salida : OUTF . '(' T_CADENA ')'  (74)
	salida : OUTF . '(' sentencia ')' ';'  (75)
	salida : OUTF . '(' ')' ';'  (76)

	'('  shift 51
	.  error


state 9
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION tipo subrango ';'  (77)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' LONGINT '>' T_ID ';'  (78)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' DOUBLE '>' T_ID ';'  (79)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' '>' T_ID ';'  (80)
	sentencia_declarativa_tipos : TYPEDEF . PAIR DOUBLE T_ID ';'  (81)
	sentencia_declarativa_tipos : TYPEDEF . PAIR LONGINT T_ID ';'  (82)
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION tipo subrango  (83)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' T_ID '>' T_ID ';'  (84)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' LONGINT '>' T_ID  (85)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' DOUBLE '>' T_ID  (86)
	sentencia_declarativa_tipos : TYPEDEF . '<' LONGINT '>' T_ID ';'  (87)
	sentencia_declarativa_tipos : TYPEDEF . '<' DOUBLE '>' T_ID ';'  (88)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' LONGINT '>' ';'  (89)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' DOUBLE '>' ';'  (90)
	sentencia_declarativa_tipos : TYPEDEF . T_ASIGNACION tipo subrango ';'  (91)
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION subrango ';'  (92)
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION tipo ';'  (93)
	sentencia_declarativa_tipos : TYPEDEF . T_ID tipo subrango ';'  (94)

	PAIR  shift 52
	T_ASIGNACION  shift 53
	T_ID  shift 54
	'<'  shift 55
	.  error


state 10
	sentencia : RET . '(' expresion ')' ';'  (18)
	sentencia : RET . '(' expresion ')'  (19)
	sentencia : RET . '(' ')' ';'  (20)

	'('  shift 56
	.  error


state 11
	inicio_while : REPEAT .  (64)

	.  reduce 64


state 12
	goto_statement : GOTO . T_ETIQUETA ';'  (128)
	goto_statement : GOTO . ';'  (129)
	goto_statement : GOTO . T_ETIQUETA  (130)
	goto_statement : GOTO . error  (131)

	error  shift 57
	T_ETIQUETA  shift 58
	';'  shift 59
	.  error


state 13
	tipo : LONGINT .  (42)

	.  reduce 42


state 14
	tipo : DOUBLE .  (41)

	.  reduce 41


state 15
	tipo : T_ID .  (43)
	IDENTIFIER_LIST : T_ID .  (118)
	IDENTIFIER_LIST : T_ID . error acceso_par  (121)
	acceso_par : T_ID . '{' T_CTE '}'  (125)
	acceso_par : T_ID . '{' '}'  (126)
	acceso_par : T_ID . T_CADENA  (127)

	error  shift 60
	T_CADENA  shift 61
	'{'  shift 62
	FUN  reduce 43
	T_ASIGNACION  reduce 118
	T_ID  reduce 43
	';'  reduce 43
	','  reduce 118


state 16
	IDENTIFIER_LIST : T_CTE .  (123)

	.  reduce 123


state 17
	sentencia : T_ETIQUETA .  (17)

	.  reduce 17


state 18
	bloque_sentencias : BEGIN sentencias . END  (5)
	sentencias : sentencias . sentencia  (8)

	IF  shift 6
	END  shift 63
	OUTF  shift 8
	TYPEDEF  shift 9
	RET  shift 10
	REPEAT  shift 11
	GOTO  shift 12
	LONGINT  shift 13
	DOUBLE  shift 14
	T_ID  shift 15
	T_CTE  shift 16
	T_ETIQUETA  shift 17
	.  error

	sentencia  goto 64
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	tipo  goto 28
	encabezado_funcion  goto 29
	inicio_while  goto 30
	IDENTIFIER_LIST  goto 31
	acceso_par  goto 32


state 19
	sentencias : sentencia .  (7)

	.  reduce 7


state 20
	sentencia : declaracion .  (9)

	.  reduce 9


state 21
	sentencia : asignacion .  (10)

	.  reduce 10


state 22
	sentencia : if_statement .  (11)

	.  reduce 11


state 23
	sentencia : repeat_while_statement .  (12)

	.  reduce 12


state 24
	sentencia : salida .  (13)

	.  reduce 13


state 25
	sentencia : declaracion_funcion .  (14)

	.  reduce 14


state 26
	sentencia : goto_statement .  (15)

	.  reduce 15


state 27
	sentencia : sentencia_declarativa_tipos .  (16)

	.  reduce 16


state 28
	declaracion : tipo . lista_var ';'  (21)
	declaracion : tipo . lista_var error  (22)
	declaracion : tipo . ';'  (23)
	encabezado_funcion : tipo . FUN  (28)
	declaracion_funcion : tipo . nombre '(' tipo T_ID ')' bloque_sentencias  (32)

	FUN  shift 65
	T_ID  shift 66
	';'  shift 67
	.  error

	nombre  goto 68
	lista_var  goto 69


state 29
	declaracion_funcion : encabezado_funcion . nombre '(' parametro ')' bloque_sentencias  (29)
	declaracion_funcion : encabezado_funcion . nombre '(' parametros_error ')' bloque_sentencias  (30)
	declaracion_funcion : encabezado_funcion . nombre '(' tipo ')' bloque_sentencias  (31)
	declaracion_funcion : encabezado_funcion . '(' tipo T_ID ')' bloque_sentencias  (33)
	declaracion_funcion : encabezado_funcion . nombre '(' parametro ')' bloque_sentencias ';'  (34)

	T_ID  shift 70
	'('  shift 71
	.  error

	nombre  goto 72


state 30
	repeat_while_statement : inicio_while . repeat_sentencia WHILE '(' condicion ')' ';'  (65)
	repeat_while_statement : inicio_while . repeat_sentencia WHILE '(' condicion ')'  (66)
	repeat_while_statement : inicio_while . WHILE '(' condicion ')'  (67)
	repeat_while_statement : inicio_while . repeat_sentencia WHILE '(' ')' ';'  (68)
	repeat_while_statement : inicio_while . repeat_sentencia WHILE condicion ';'  (69)
	repeat_while_statement : inicio_while . repeat_sentencia error '(' condicion ')' ';'  (70)

	IF  shift 6
	BEGIN  shift 1
	OUTF  shift 8
	TYPEDEF  shift 9
	RET  shift 10
	REPEAT  shift 11
	WHILE  shift 73
	GOTO  shift 12
	LONGINT  shift 13
	DOUBLE  shift 14
	T_ID  shift 15
	T_CTE  shift 16
	T_ETIQUETA  shift 17
	.  error

	bloque_sentencias  goto 74
	sentencia  goto 75
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	tipo  goto 28
	encabezado_funcion  goto 29
	repeat_sentencia  goto 76
	inicio_while  goto 30
	IDENTIFIER_LIST  goto 31
	acceso_par  goto 32


state 31
	asignacion : IDENTIFIER_LIST . T_ASIGNACION expresion_list error  (111)
	asignacion : IDENTIFIER_LIST . T_ASIGNACION expresion_list ';'  (112)
	asignacion : IDENTIFIER_LIST . T_ASIGNACION ';'  (113)
	IDENTIFIER_LIST : IDENTIFIER_LIST . ',' T_ID  (116)
	IDENTIFIER_LIST : IDENTIFIER_LIST . ',' acceso_par  (117)
	IDENTIFIER_LIST : IDENTIFIER_LIST . ',' T_CTE  (124)

	T_ASIGNACION  shift 77
	','  shift 78
	.  error


state 32
	IDENTIFIER_LIST : acceso_par .  (119)
	IDENTIFIER_LIST : acceso_par . error acceso_par  (120)
	IDENTIFIER_LIST : acceso_par . error T_ID  (122)

	error  shift 79
	T_ASIGNACION  reduce 119
	','  reduce 119


state 33
	programa : nombre bloque_sentencias .  (1)

	.  reduce 1


state 34
	expresion : error .  (152)

	.  reduce 152


state 35
	comparador : MENOR_IGUAL .  (105)

	.  reduce 105


state 36
	comparador : MAYOR_IGUAL .  (106)

	.  reduce 106


state 37
	comparador : DISTINTO .  (107)

	.  reduce 107


state 38
	acceso_par : T_ID . '{' T_CTE '}'  (125)
	acceso_par : T_ID . '{' '}'  (126)
	acceso_par : T_ID . T_CADENA  (127)
	invocacion_funcion : T_ID . '(' parametro_real ')'  (132)
	invocacion_funcion : T_ID . '(' error ')'  (133)
	expresion : T_ID .  (148)

	T_CADENA  shift 61
	'('  shift 80
	'{'  shift 62
	error  reduce 148
	THEN  reduce 148
	MENOR_IGUAL  reduce 148
	MAYOR_IGUAL  reduce 148
	DISTINTO  reduce 148
	'+'  reduce 148
	'-'  reduce 148
	'*'  reduce 148
	'/'  reduce 148
	')'  reduce 148
	';'  reduce 148
	','  reduce 148
	'<'  reduce 148
	'>'  reduce 148
	'='  reduce 148


state 39
	expresion : T_CTE .  (147)

	.  reduce 147


state 40
	unaria : '-' . T_CTE  (153)

	T_CTE  shift 81
	.  error


state 41
	if_statement : IF '(' . condicion ')' bloque_THEN END_IF ';'  (49)
	if_statement : IF '(' . condicion ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'  (50)
	if_statement : IF '(' . condicion ')' bloque_THEN_CON_ELSE repeat_sentencia END_IF ';'  (51)
	if_statement : IF '(' . condicion ')' bloque_THEN END_IF  (52)
	if_statement : IF '(' . condicion ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF  (53)
	if_statement : IF '(' . ')' bloque_THEN END_IF ';'  (54)
	if_statement : IF '(' . ')' bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'  (55)
	if_statement : IF '(' . condicion ')' repeat_sentencia END_IF ';'  (56)
	if_statement : IF '(' . condicion ')' repeat_sentencia bloque_ELSE END_IF ';'  (57)
	if_statement : IF '(' . condicion ')' signo_THEN END_IF ';'  (58)
	if_statement : IF '(' . condicion ')' signo_THEN signo_ELSE END_IF ';'  (59)
	if_statement : IF '(' . condicion ')' bloque_THEN error ';'  (62)
	if_statement : IF '(' . condicion ')' bloque_THEN_CON_ELSE bloque_ELSE error ';'  (63)

	error  shift 34
	MENOR_IGUAL  shift 35
	MAYOR_IGUAL  shift 36
	DISTINTO  shift 37
	T_ID  shift 38
	T_CTE  shift 39
	'-'  shift 40
	')'  shift 82
	'<'  shift 42
	'>'  shift 43
	'='  shift 44
	.  error

	expresion  goto 45
	condicion  goto 83
	comparador  goto 47
	acceso_par  goto 48
	invocacion_funcion  goto 49
	unaria  goto 50


state 42
	comparador : '<' .  (109)

	.  reduce 109


state 43
	comparador : '>' .  (110)

	.  reduce 110


state 44
	comparador : '=' .  (108)

	.  reduce 108


state 45
	condicion : expresion . comparador expresion  (101)
	condicion : expresion . error expresion  (102)
	condicion : expresion . comparador  (103)
	expresion : expresion . '+' expresion  (143)
	expresion : expresion . '-' expresion  (144)
	expresion : expresion . '*' expresion  (145)
	expresion : expresion . '/' expresion  (146)

	error  shift 84
	MENOR_IGUAL  shift 35
	MAYOR_IGUAL  shift 36
	DISTINTO  shift 37
	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'<'  shift 42
	'>'  shift 43
	'='  shift 44
	.  error

	comparador  goto 89


state 46
	if_statement : IF condicion . bloque_THEN END_IF ';'  (60)
	if_statement : IF condicion . bloque_THEN_CON_ELSE bloque_ELSE END_IF ';'  (61)

	THEN  shift 90
	.  error

	signo_THEN  goto 91
	bloque_THEN  goto 92
	bloque_THEN_CON_ELSE  goto 93


state 47
	condicion : comparador . expresion  (104)

	error  shift 34
	T_ID  shift 38
	T_CTE  shift 39
	'-'  shift 40
	.  error

	expresion  goto 94
	acceso_par  goto 48
	invocacion_funcion  goto 49
	unaria  goto 50


state 48
	expresion : acceso_par .  (149)

	.  reduce 149


state 49
	expresion : invocacion_funcion .  (150)

	.  reduce 150


state 50
	expresion : unaria .  (151)

	.  reduce 151


state 51
	salida : OUTF '(' . T_CADENA ')' ';'  (71)
	salida : OUTF '(' . expresion ')' ';'  (72)
	salida : OUTF '(' . expresion ')'  (73)
	salida : OUTF '(' . T_CADENA ')'  (74)
	salida : OUTF '(' . sentencia ')' ';'  (75)
	salida : OUTF '(' . ')' ';'  (76)

	error  shift 34
	IF  shift 6
	OUTF  shift 8
	TYPEDEF  shift 9
	RET  shift 10
	REPEAT  shift 11
	GOTO  shift 12
	LONGINT  shift 13
	DOUBLE  shift 14
	T_CADENA  shift 95
	T_ID  shift 96
	T_CTE  shift 97
	T_ETIQUETA  shift 17
	'-'  shift 40
	')'  shift 98
	.  error

	sentencia  goto 99
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	expresion  goto 100
	tipo  goto 28
	encabezado_funcion  goto 29
	inicio_while  goto 30
	IDENTIFIER_LIST  goto 31
	acceso_par  goto 101
	invocacion_funcion  goto 49
	unaria  goto 50


state 52
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' LONGINT '>' T_ID ';'  (78)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' DOUBLE '>' T_ID ';'  (79)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' '>' T_ID ';'  (80)
	sentencia_declarativa_tipos : TYPEDEF PAIR . DOUBLE T_ID ';'  (81)
	sentencia_declarativa_tipos : TYPEDEF PAIR . LONGINT T_ID ';'  (82)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' T_ID '>' T_ID ';'  (84)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' LONGINT '>' T_ID  (85)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' DOUBLE '>' T_ID  (86)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' LONGINT '>' ';'  (89)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' DOUBLE '>' ';'  (90)

	LONGINT  shift 102
	DOUBLE  shift 103
	'<'  shift 104
	.  error


state 53
	sentencia_declarativa_tipos : TYPEDEF T_ASIGNACION . tipo subrango ';'  (91)

	LONGINT  shift 13
	DOUBLE  shift 14
	T_ID  shift 105
	.  error

	tipo  goto 106


state 54
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION tipo subrango ';'  (77)
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION tipo subrango  (83)
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION subrango ';'  (92)
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION tipo ';'  (93)
	sentencia_declarativa_tipos : TYPEDEF T_ID . tipo subrango ';'  (94)

	LONGINT  shift 13
	DOUBLE  shift 14
	T_ASIGNACION  shift 107
	T_ID  shift 105
	.  error

	tipo  goto 108


state 55
	sentencia_declarativa_tipos : TYPEDEF '<' . LONGINT '>' T_ID ';'  (87)
	sentencia_declarativa_tipos : TYPEDEF '<' . DOUBLE '>' T_ID ';'  (88)

	LONGINT  shift 109
	DOUBLE  shift 110
	.  error


state 56
	sentencia : RET '(' . expresion ')' ';'  (18)
	sentencia : RET '(' . expresion ')'  (19)
	sentencia : RET '(' . ')' ';'  (20)

	error  shift 34
	T_ID  shift 38
	T_CTE  shift 39
	'-'  shift 40
	')'  shift 111
	.  error

	expresion  goto 112
	acceso_par  goto 48
	invocacion_funcion  goto 49
	unaria  goto 50


state 57
	goto_statement : GOTO error .  (131)

	.  reduce 131


state 58
	goto_statement : GOTO T_ETIQUETA . ';'  (128)
	goto_statement : GOTO T_ETIQUETA .  (130)

	';'  shift 113
	error  reduce 130
	IF  reduce 130
	ELSE  reduce 130
	BEGIN  reduce 130
	END  reduce 130
	END_IF  reduce 130
	OUTF  reduce 130
	TYPEDEF  reduce 130
	RET  reduce 130
	REPEAT  reduce 130
	WHILE  reduce 130
	GOTO  reduce 130
	LONGINT  reduce 130
	DOUBLE  reduce 130
	T_ID  reduce 130
	T_CTE  reduce 130
	T_ETIQUETA  reduce 130
	')'  reduce 130


state 59
	goto_statement : GOTO ';' .  (129)

	.  reduce 129


state 60
	IDENTIFIER_LIST : T_ID error . acceso_par  (121)

	T_ID  shift 114
	.  error

	acceso_par  goto 115


state 61
	acceso_par : T_ID T_CADENA .  (127)

	.  reduce 127


state 62
	acceso_par : T_ID '{' . T_CTE '}'  (125)
	acceso_par : T_ID '{' . '}'  (126)

	T_CTE  shift 116
	'}'  shift 117
	.  error


state 63
	bloque_sentencias : BEGIN sentencias END .  (5)

	.  reduce 5


state 64
	sentencias : sentencias sentencia .  (8)

	.  reduce 8


state 65
	encabezado_funcion : tipo FUN .  (28)

	.  reduce 28


state 66
	lista_var : T_ID .  (25)
	nombre : T_ID .  (27)

	error  reduce 25
	T_ID  reduce 25
	'('  reduce 27
	';'  reduce 25
	','  reduce 25


state 67
	declaracion : tipo ';' .  (23)

	.  reduce 23


state 68
	declaracion_funcion : tipo nombre . '(' tipo T_ID ')' bloque_sentencias  (32)

	'('  shift 118
	.  error


state 69
	declaracion : tipo lista_var . ';'  (21)
	declaracion : tipo lista_var . error  (22)
	lista_var : lista_var . ',' T_ID  (24)
	lista_var : lista_var . T_ID  (26)

	error  shift 119
	T_ID  shift 120
	';'  shift 121
	','  shift 122
	.  error


state 70
	nombre : T_ID .  (27)

	.  reduce 27


state 71
	declaracion_funcion : encabezado_funcion '(' . tipo T_ID ')' bloque_sentencias  (33)

	LONGINT  shift 13
	DOUBLE  shift 14
	T_ID  shift 105
	.  error

	tipo  goto 123


state 72
	declaracion_funcion : encabezado_funcion nombre . '(' parametro ')' bloque_sentencias  (29)
	declaracion_funcion : encabezado_funcion nombre . '(' parametros_error ')' bloque_sentencias  (30)
	declaracion_funcion : encabezado_funcion nombre . '(' tipo ')' bloque_sentencias  (31)
	declaracion_funcion : encabezado_funcion nombre . '(' parametro ')' bloque_sentencias ';'  (34)

	'('  shift 124
	.  error


state 73
	repeat_while_statement : inicio_while WHILE . '(' condicion ')'  (67)

	'('  shift 125
	.  error


state 74
	repeat_sentencia : bloque_sentencias .  (39)

	.  reduce 39


state 75
	repeat_sentencia : sentencia .  (40)

	.  reduce 40


state 76
	repeat_while_statement : inicio_while repeat_sentencia . WHILE '(' condicion ')' ';'  (65)
	repeat_while_statement : inicio_while repeat_sentencia . WHILE '(' condicion ')'  (66)
	repeat_while_statement : inicio_while repeat_sentencia . WHILE '(' ')' ';'  (68)
	repeat_while_statement : inicio_while repeat_sentencia . WHILE condicion ';'  (69)
	repeat_while_statement : inicio_while repeat_sentencia . error '(' condicion ')' ';'  (70)

	error  shift 126
	WHILE  shift 127
	.  error


state 77
	asignacion : IDENTIFIER_LIST T_ASIGNACION . expresion_list error  (111)
	asignacion : IDENTIFIER_LIST T_ASIGNACION . expresion_list ';'  (112)
	asignacion : IDENTIFIER_LIST T_ASIGNACION . ';'  (113)

	error  shift 34
	T_ID  shift 38
	T_CTE  shift 39
	'-'  shift 40
	';'  shift 128
	.  error

	expresion  goto 129
	expresion_list  goto 130
	acceso_par  goto 48
	invocacion_funcion  goto 49
	unaria  goto 50

